--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # ========================================================================================
 
 # Uncomment and set the URL of your site (with protocol, e.g. `https://`)
-# NOTE: You don't need to provide this property when hosting on GitHub Pages or Netlify.
+# NOTE: You don't need to provide this property when hosting on GitHub Pages or Netlify
 url:                   https://inezmeow.github.io/
 
 # Uncomment and set the "base URL" of your site.
