--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,10 @@ title:                 Inez's Adventure in Wonderland
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  Personal Blog of Inez
 
 # A shorter description for the sidebar.
-tagline:               Change `tagline` in `_config.yml`
+tagline:               Personal Blog of Inez
 
 # A list of keywords for your blog
 keywords:              []
