--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   name:                Inez Wong
   email:               inezmeow@gmail.com
   # # Used by `jekyll-seo-tag`:
-  # twitter:             <username>
+  twitter:             inezsuzune
 
 # Add links to the sidebar.
 menu:
