--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,17 +2,23 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Inez Wong
+  email:             inezmeow@gmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    
-    Open `_data/authors.yml` to edit this text.
+    A Durham University student undergoing the program MSc Behavioural Science student from Hong Kong.
+    Wide range of Interest:
+    - People analytics
+    - Psychology
+    - Ice-Skating
+    - Freediving
+    - Japanese Anime
+    - Mystery and Thriller movies
+    - Strolling (but have no sense of direction)
+    - Travelling
+    - Delicious food & Baking
 
   # This photo will be used in the about section
   picture:
@@ -26,8 +32,8 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
+    twitter:         inezsuzune
+    github:          inezmeow
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
