--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,8 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     A Durham University student undergoing the program MSc Behavioural Science student from Hong Kong.
-    Wide range of Interest:
+    
+    Wide range of interests:
     - People analytics
     - Psychology
     - Ice-Skating
@@ -20,6 +21,8 @@ author1:
     - Travelling
     - Delicious food & Baking
 
+    My Book list: https://www.goodreads.com/user/show/137411990-inez
+    My Anime list: https://myanimelist.net/animelist/lysuzune
   # This photo will be used in the about section
   picture:
     path:            https://via.placeholder.com/128x128
