--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,22 +24,22 @@ author1:
     My Book list: https://www.goodreads.com/user/show/137411990-inez
     My Anime list: https://myanimelist.net/animelist/lysuzune
   # This photo will be used in the about section
-  picture:
-    path:            https://via.placeholder.com/128x128
-    # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://via.placeholder.com/128x128
-      2x:            https://via.placeholder.com/256x256
+  #picture:
+  #  path:            https://via.placeholder.com/128x128
+  #  # srcset is optional, but can be used to provide higher res versions for retina displays
+  #  srcset:
+  #    1x:            https://via.placeholder.com/128x128
+  #    2x:            https://via.placeholder.com/256x256
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         inezsuzune
-    github:          inezmeow
+    # twitter:         inezsuzune
+    # github:          inezmeow
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook:          WytInez
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
@@ -48,7 +48,7 @@ author1:
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    # instagram:       <username>
+    instagram:         inez.suzune
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
@@ -66,7 +66,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    # linkedin:        <firstname-lastname-string>
+    linkedin:        Inez Wong
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
