--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -21,12 +21,13 @@ author1:
     - Travelling
     - Delicious food & Baking
 
-    My Book list: https://www.goodreads.com/user/show/137411990-inez
-    My Anime list: https://myanimelist.net/animelist/lysuzune
+    [My Book list](https://www.goodreads.com/user/show/137411990-inez)
+
+    [My Anime list](https://myanimelist.net/animelist/lysuzune)
   # This photo will be used in the about section
-  #picture:
-  #  path:            https://via.placeholder.com/128x128
-  #  # srcset is optional, but can be used to provide higher res versions for retina displays
+  picture:
+    path:            https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/243872916_2935389723378761_1333951075039570319_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=730e14&_nc_ohc=9N0Kppts5cIAX_05_aF&_nc_ht=scontent-lhr8-1.xx&oh=00_AT8CPHc9EPR3N5BVpAxR7OxIG3rzzbmfhBIt6rn8bNaiqA&oe=61FFCEC4
+    # srcset is optional, but can be used to provide higher res versions for retina displays
   #  srcset:
   #    1x:            https://via.placeholder.com/128x128
   #    2x:            https://via.placeholder.com/256x256
