--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -67,7 +67,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    linkedin:        Yuen Ting(Inez) Wong
+    linkedin:        inezwyt
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
