--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    A Durham University student undergoing the program MSc Behavioural Science student from Hong Kong.
+    A white rabbit sent by angels from heaven to observe human beings.
     
     Wide range of interests:
     - People analytics
@@ -26,7 +26,7 @@ author1:
     [My Anime list](https://myanimelist.net/animelist/lysuzune)
   # This photo will be used in the about section
   picture:
-    path:            https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/243872916_2935389723378761_1333951075039570319_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=730e14&_nc_ohc=9N0Kppts5cIAX_05_aF&_nc_ht=scontent-lhr8-1.xx&oh=00_AT8CPHc9EPR3N5BVpAxR7OxIG3rzzbmfhBIt6rn8bNaiqA&oe=61FFCEC4
+    path:            /assets/img/inez.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
   #  srcset:
   #    1x:            https://via.placeholder.com/128x128
