--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,21 +9,7 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     A white rabbit sent by angels from heaven to observe human beings.
-    
-    Wide range of interests:
-    - People analytics
-    - Psychology
-    - Ice-Skating
-    - Freediving
-    - Japanese Anime
-    - Mystery and Thriller movies
-    - Strolling (but have no sense of direction)
-    - Travelling
-    - Delicious food & Baking
 
-    [My Book list](https://www.goodreads.com/user/show/137411990-inez)
-
-    [My Anime list](https://myanimelist.net/animelist/lysuzune)
   # This photo will be used in the about section
   picture:
     path:            /assets/img/inez.jpg
@@ -38,9 +24,11 @@ author1:
   social:
     # twitter:         inezsuzune
     # github:          inezmeow
-    # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
+    instagram:         inez.suzune
     facebook:          WytInez
+    linkedin:          inezwyt
+    email:             inezmeow@gmail.com
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
@@ -49,7 +37,6 @@ author1:
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    instagram:         inez.suzune
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
@@ -67,7 +54,6 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    linkedin:        inezwyt
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
