--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ author:
 # Add links to the sidebar.
 menu:
   - title:             Thoughts
-    url:               /thoughts/
+    url:               /docs/
   - title:             Blog
-    url:               /blog/
+    url:               /example/
   - title:             About
     url:               /about/
 
@@ -135,10 +135,10 @@ defaults:
       sitemap:         false
 
   # # You can use the following to enable comments on all posts.
-  - scope:
-      type:            posts
-    values:
-      comments:        true
+  # - scope:
+  #     type:            posts
+  #   values:
+  #     comments:        true
 
   # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
   # but we want them to be `WebPage`s:
