--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ menu:
   - title:             Thoughts
     url:               /thoughts/
   - title:             Blog
-    url:               /example/
+    url:               /blog/
   - title:             About
     url:               /about/
 
