--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -14,6 +14,8 @@ home:                  Home
 pages:                 Pages
 posts:                 Posts
 about:                 About
+blog:                  Blog
+thoughts:              Thoughts
 related_posts:         Related Posts
 other_projects:        Other Projects
 comments:              Comments
