--- a/_config.yml
+++ b/_config.yml
@@ -164,6 +164,10 @@ kramdown:
   footnote_backlink:   '&#x21a9;&#xfe0e;'
 
 
+# ----------------------------------------------------------------------------------------
+favicon: /assets/icons/favicon.ico
+apple_touch_icon: /assets/img/icon.png
+
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
 
