--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,8 @@ author:
 menu:
   - title:             Mumbling
     url:               /mumbling/
-  - title:             Blog
-    url:               /blog/
+  - title:             Dawdling
+    url:               /dawdling/
   - title:             About
     url:               /about/
 
