--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description:           >
   Inez's Personal Blog
 
 # A shorter description for the sidebar.
-tagline:               White Rabbit's Adventure in Wonderland
+tagline:               Adventure in Wonderland
 
 # A list of keywords for your blog
 keywords:              [inez, suzune, lingyin, inezmeow]
