--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -14,7 +14,7 @@ home:                  Home
 pages:                 Pages
 posts:                 Posts
 about:                 About
-blog:                  Blog
+dawdling:              Dawdling
 thoughts:              Thoughts
 related_posts:         Related Posts
 other_projects:        Other Projects
