--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ menu:
   - title:             Mumbling
     url:               /mumbling/
   - title:             Dawdling
-    url:               /dawdling/
+    url:               /blog/
   - title:             About
     url:               /about/
 
