--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description:           >
 tagline:               Adventure in Wonderland
 
 # A list of keywords for your blog
-keywords:              [inez, suzune, lingyin, inezmeow]
+keywords:              [inez, suzune, lingyin, inezmeow, inezwong]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
@@ -66,7 +66,7 @@ menu:
 #    url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2021. All rights reserved.
+copyright:             © 2022. All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
