--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -25,13 +25,13 @@ author1:
     # twitter:         inezsuzune
     # github:          inezmeow
     # rss:             https://<url>/feed.xml
-    instagram:         inez.suzune
+    instagram:         lyin.meow
     facebook:          WytInez
     linkedin:          inezwyt
     email:             inezmeow@gmail.com
     # google:          <number>
     # vk:              <username>
-    # youtube:         <string_string_string>
+    youtube:           inezwonderland
     # vimeo:           <username>
     # vine:            <username>
     # spotify:         <user>/<number>
