--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ title:                 Inez
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
   Inez's Personal Blog
+  Hello
 
 # A shorter description for the sidebar.
 tagline:               Adventure in Wonderland
