--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # Uncomment and set the URL of your site (with protocol, e.g. `https://`)
 # NOTE: You don't need to provide this property when hosting on GitHub Pages or Netlify.
-# url:                   https://inezmeow.github.io
+# url:                   https://username.github.io
 
 # Uncomment and set the "base URL" of your site.
 # When your site is in a subdirectory, set to `/<name of directory>`,
@@ -36,24 +36,28 @@ keywords:              [inez, suzune, lingyin, inezmeow, inezwong]
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/logo.JPG
+logo:                  /assets/img/logo.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                Inez Wong
-  email:               inezmeow@gmail.com
+  name:                <Inez> <Wong>
+  email:               <inezmeow@gmail.com>
   # # Used by `jekyll-seo-tag`:
-  twitter:             inezsuzune
+  # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
+  - title:             About
+    url:               /about/
   - title:             Mumbling
     url:               /mumbling/
   - title:             Dawdling
     url:               /dawdling/
-  - title:             About
-    url:               /about/
+  - title:             Résumé*
+    url:               /resume/
+#  - title:             Documentation
+#    url:               /docs/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -66,21 +70,21 @@ menu:
 #    url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2022. All rights reserved.
+copyright:             © 2024. All rights reserved.
 
 # Format of the permalinks
-permalink:             /:categories/:year-:month-:day-:title/
+permalink:             /blog/:categories/:year-:month-:day-:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:              10
-paginate_path:         /:num/
+paginate_path:         /blog/:num/
 
 
 # Theme
 # ---------------------------------------------------------------------------------------
 
 # theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+# remote_theme: hydecorp/hydejack@v9
 
 
 # Customizaton
@@ -128,6 +132,7 @@ defaults:
     values:
       sitemap:         false
 
+  # Don't include licenses in sitemap (feel free to delete)
   - scope:
       path:            licenses/
     values:
@@ -290,7 +295,7 @@ hydejack:
 
 collections:
   featured_categories:
-    permalink:         /:name/
+    permalink:         /blog/:name/
     output:            true
 
   featured_tags:
@@ -306,6 +311,8 @@ collections:
 # ----------------------------------------------------------------------------------------
 
 exclude:
+  - ./#jekyll-theme-hydejack/node_modules
+  - ./#jekyll-theme-hydejack/.git
   - .jekyll-cache
   - .sass-cache
   - '*.toml'
@@ -382,7 +389,7 @@ titles_from_headings:
   collections:         true
 
 compress_html:
-  comments:            ["<!-- ", " -->"]
+  comments:            ["<!--", "-->"]
   clippings:           all
   endings:             all
   ignore:
@@ -391,6 +398,7 @@ compress_html:
 sass:
   style:               compressed
 
+
 # Jekyll Compose Defaults
 # ---------------------------------------------------------------------------------------
 
@@ -398,21 +406,21 @@ jekyll_compose:
   default_front_matter:
     drafts:
       layout: post
-      description: >
+      description: > 
         A short ~160 character description of your post for search engines,
         social media previews, etc.
       image:
         path: /assets/img/sidebar-bg.jpg
     posts:
       layout: post
-      description: >
+      description: > 
         A short ~160 character description of your post for search engines,
         social media previews, etc.
       image:
         path: /assets/img/sidebar-bg.jpg
     projects:
       layout: project
-      description: >
+      description: > 
         A short ~160 character description of your post for search engines,
         social media previews, etc.
       image:
