--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <Inez> <Wong>
-  email:               <inezmeow@gmail.com>
+  name:                Inez Wong
+  email:               inezmeow@gmail.com
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
@@ -328,6 +328,7 @@ include:
 # ----------------------------------------------------------------------------------------
 
 plugins:
+  - jekyll-avatar #author’s picture to appear in addition the about text
   - jekyll-default-layout
   - jekyll-feed
   - jekyll-optional-front-matter
