--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ remote_theme: hydecorp/hydejack@v9
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/bg.jpg
+accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          rgb(98,32,30)
 
 # This is used for the `theme-color` meta tag,
