--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,14 @@ menu:
     url:               /dawdling/
   - title:             Résumé*
     url:               /resume/
-#  - title:             Documentation
-#    url:               /docs/
+  - title:             Blog
+    url:               /blog/
+  - title:             Projects
+    url:               /projects/
+  - title:             Résumé*
+    url:               /resume/
+  - title:             Documentation
+    url:               /docs/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
