--- a/_config.yml
+++ b/_config.yml
@@ -308,17 +308,13 @@ collections:
     permalink:         /tag-:name/
     output:            true
 
-  projects:
-    permalink:         /projects/:path/
-    output:            true
-
-  other_projects:
-    permalink:         /other_projects/:path/
-    output:            true
-
-  learning:
+  learning:  #Project layout
     permalink:         /learning/:path/
     output:            true
+
+  # projects:
+  #   permalink:         /projects/:path/
+  #   output:            true
 
 
 # File inclusion/exclusion
