--- a/_config.yml
+++ b/_config.yml
@@ -299,7 +299,7 @@ hydejack:
 
 collections:
   featured_categories:
-    permalink:         /blog/:name/
+    permalink:         /:name/
     output:            true
 
   featured_tags:
